# codeTillDawnHackahthon

./: .env.example  .gitignore  README.md  run_sayam.sh
sayam/: brain.py  control.py  ears.py  greet.py  hello_move.py  live_view.py  liveliness.py  notes.py  orchestrator.py  vision.py  vitals_bridge.py  voice.py
vitals/: CMakeLists.txt  README.md  main.cc
